@@ -3,7 +3,7 @@
     <parent>
         <artifactId>broadleaf</artifactId>
         <groupId>org.broadleafcommerce</groupId>
-        <version>2.2.0-GA</version>
+        <version>3.0.0-GA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>integration</artifactId>
@@ -63,7 +63,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx512m</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -168,7 +168,7 @@
                                 <configuration>
                                     <argLine>
                                         -Dlegacy=true 
-                                        -Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
+                                        -Xmx1024m -XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
                                         -javaagent:${jrebel.path} -Drebel.log.stdout=true
                                     </argLine>
                                 </configuration>
@@ -177,7 +177,7 @@
                                 <id>non-legacy-test</id>
                                 <configuration>
                                     <argLine>
-                                        -Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
+                                        -Xmx1024m -XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8083 
                                         -javaagent:${jrebel.path} -Drebel.log.stdout=true
                                     </argLine>
                                 </configuration>
